# loge

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  aliases.js  rustfmt.toml  search-index.js  settings.html  source-files.js
.github/workflows/: benchmark.yml  changelog.yml  check-code.yml  release.yml
benches/: benchmark.rs
dev/bench/: data.js
examples/: fileline-log.rs  jsonified-log.rs  log.rs  performance.rs
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
loge/: all.html  enum.LogeFormat.html  fn.init.html  fn.init_custom.html  fn.init_custom_env.html  fn.try_init.html  fn.try_init_custom.html  fn.try_init_custom_env.html  index.html  sidebar-items.js
src/: filewriter.rs  lib.rs
src/loge/: lib.rs.html
tests/: simple-fileline-log.rs  simple-jsonified-log.rs  simple-log.rs
