[package]
name = "loge"
version = "0.2.3"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
description = "A analysis friendly logger with formatted output."
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
license = "MIT/Apache-2.0"
repository = "https://github.com/psiace/loge"
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
chrono = "0.4"
env_logger = "0.7"
log = "0.4"
