[package]
name = "loge"
version = "0.4.2"
authors = ["Chojan Shang <psiace@outlook.com>"]
edition = "2018"
description = "A analysis friendly logger with formatted output."
categories = ["development-tools::debugging"]
keywords = ["log", "logger", "logging"]
license = "MIT/Apache-2.0"
repository = "https://github.com/psiace/loge"
readme = "README.md"

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[features]
default = ["chrono", "colored", "json"]
json = ["serde_json", "json-color"]
file = []

[dependencies]
log = { version = "0.4", features = ["std"] }

chrono = { version = "0.4", optional = true }
colored = { version = "1.9", optional = true}
serde_json = { version = "1.0", optional = true }
json-color = { version = "0.7", optional = true }

[target.'cfg(windows)'.dependencies]
atty = "0.2"
winapi = { version = "0.3", features = ["handleapi", "winbase"] }

[dev-dependencies]
loge = {path="./", features=["default"]}
